스크립트 수정완료

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ i
 	</head>
 	<body>
 		<h1>webpublisher git 사용하기</h1>
-
+		<p>Git을 이용한 웹페블리셔 프로젝트</p>
+		<div class="gitHub"></div>
+		<!-- 외부스크립트 작성 예정 -->
+		<dl></dl>
 	</body>
 </html>
