스타일시트 연결

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="utf-8">
+		<link href="main.css" rel="stylesheet">
 		<title>git &amp; github</title>
 	</head>
 	<body>
