--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="utf-8">
-		<link href="main.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
 		<title>git &amp; github</title>
 	</head>
 	<body>
